--- a/style.css
+++ b/style.css
@@ -1,3 +1,193 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    scroll-behavior: smooth;
+    font-family: "poppins";
+}
+
+h1, h2, h3, h4, h5, h6, button{
+    font-family: "Torus Notched";
+}
+
 body{
-    background-color: red;
+    overflow-x: hidden; /*Pour que rien ne depasse dans l'axe x horizontal */
+    max-width: 1920px;
+}
+
+/* HEADER */
+
+header{
+    height: 120px;
+    width: 100%;
+    top: 0;
+    left: 0;
+}
+
+
+header .container{
+    width: 1500px;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+header .container ul{
+    display: flex;
+}
+
+header .container ul a{
+    font-size: 1.2em;
+    font-weight: 500;
+    margin: 0 30px;
+    color: #66aefc;
+}
+@media (max-width: 1500px){
+    header{
+        position: relative;
+        background-color: #66aefc;
+    }
+    header .container{
+        width: 100%;
+    }
+    header .container ul a{
+        color: #ffffff;
+    }
+}
+
+@media (max-width: 750px){
+    header .logo{
+        display: none;
+    }
+    header .container{
+        justify-content: center;
+    }
+    header .container ul a{
+        margin: 0 20px;
+    }
+}
+
+/* SECTION 1 */
+@media (min-width: 1500px){
+    .sec1{
+        height: 100vh;
+        width: 100%;
+        background-image: url(images/13.png);
+        background-repeat: no-repeat;
+        background-position: top right;
+    }
+    .bg-responsive{
+        display: none;
+    }
+}
+
+.sec1 .container{
+    width: 1500px;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.sec1 h1{
+    color: #31489f;
+    font-size: 8em;
+    margin-bottom: 70px;
+}
+
+.sec1 button{
+    position: relative; /*Pour pouvoir placer le before*/
+    height: 70px;
+    width: 250px;
+    border-radius: 50px;
+    border: 3px solid #31489f;
+    background-color: white;
+    font-size: 1.5em;
+    color: #31489f;
+    z-index: 2;
+    overflow: hidden;
+    transition: 0.5s;
+}
+
+.sec1 button::before{
+    content: "";
+    top: -2px;
+    transition: 0.5s;
+    left: -2px;
+    position: absolute;
+    height: 70px;
+    width: 280px;
+    border-radius: 50px;
+    background-color: #31489f;
+    transform: translate(-100%);
+    z-index: -1;
+}
+.sec1 button:hover::before{
+    transform: translate(0%);
+}
+.sec1 button:hover{
+    color: white;
+    width: 280px;
+}
+
+.sec1 button i{
+    transform: scale(0);
+    margin: -20px;
+    transition: 0.3s;
+}
+.sec1 button:hover i{
+    transform: scale(1);
+    margin-left: 10px;
+}
+
+@media (max-width: 1500px){
+    .sec1 .container{
+        text-align: center;
+        justify-content: center;
+        width: 100%;
+    }
+    .sec1{
+        height: 100%;
+        margin-top: 100px;
+    }
+    .sec1 .bg-responsive{
+        margin-top: 50px;
+    }
+    .sec1 .bg-responsive img{
+        width: 500px;
+    }
+}
+
+
+@media (max-width: 950px){
+    .sec1 h1{
+        color: #31489f;
+        font-size: 6em;
+        margin-bottom: 60px;
+    }
+}
+
+@media (max-width: 700px){
+    .sec1 .bg-responsive img{
+        width: 70%;
+    }
+    .sec1 h1{
+        color: #31489f;
+        font-size: 4em;
+        margin-bottom: 60px;
+    }
+}
+
+@media (max-width: 500px){
+    .sec1 h1{
+        color: #31489f;
+        font-size: 3em;
+        margin-bottom: 60px;
+    }
 }
