--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     list-style: none;
     text-decoration: none;
     scroll-behavior: smooth;
-    font-family: "poppins";
+    font-family: "Torus Notched";
 }
 
 h1, h2, h3, h4, h5, h6, button{
@@ -68,7 +68,7 @@ header .container ul a{
         justify-content: center;
     }
     header .container ul a{
-        margin: 0 20px;
+        margin: 0 10px;
     }
 }
 
