--- a/style.css
+++ b/style.css
@@ -114,6 +114,10 @@ header .container ul a{
     overflow: hidden;
     transition: 0.5s;
 }
+.sec1 button:hover{
+    color: white;
+    width: 280px;
+}
 
 .sec1 button::before{
     content: "";
@@ -128,20 +132,17 @@ header .container ul a{
     transform: translate(-100%);
     z-index: -1;
 }
-.sec1 button:hover::before{
+
+.sec1 button:hover::before, .sec3 button:hover::before{
     transform: translate(0%);
 }
-.sec1 button:hover{
-    color: white;
-    width: 280px;
-}
 
-.sec1 button i{
+.sec1 button i, .sec3 button i{
     transform: scale(0);
     margin: -20px;
     transition: 0.3s;
 }
-.sec1 button:hover i{
+.sec1 button:hover i, .sec3 button:hover i{
     transform: scale(1);
     margin-left: 10px;
 }
@@ -208,6 +209,8 @@ header .container ul a{
 /* SECTION 2 */
 
 .sec2{
+    position: relative;
+    z-index: 2;
     background-color: #232323;
     padding: 120px 0;
 }
@@ -342,7 +345,109 @@ header .container ul a{
     
 }
 
-/* , .content-bottom{
 
-} */
+/* SECTION 3 */
 
+.sec3{
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    background-image: url(svg/1.svg);
+    height: 1080px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: right;
+    display: flex;
+    align-items: center;
+    filter: drop-shadow(5px 5px 10px #000);
+}
+
+.sec3 .container{
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.sec3 .separateur{
+    width: 100px;
+    height: 5px;
+    background-color: #66aefc;
+    margin: 50px 0;
+    border-radius: 0 50px 50px 0;
+}
+
+.sec3 h1{
+    color: white;
+    font-size: 4em;
+}
+.sec3 p{
+    color: white;
+    max-width: 600px;
+    line-break: anywhere;
+    margin-bottom: 50px;
+}
+
+.sec3 button{
+    position: relative; /*Pour pouvoir placer le before*/
+    height: 60px;
+    width: 220px;
+    border-radius: 50px;
+    border: 3px solid #ffffff;
+    background-color: transparent;
+    font-size: 1.5em;
+    color: #ffffff;
+    z-index: 2;
+    overflow: hidden;
+    transition: 0.5s;
+}
+.sec3 button:hover{
+    color: #31489f;
+    width: 280px;
+}
+
+.sec3 button::before{
+    content: "";
+    top: -2px;
+    transition: 0.5s;
+    left: -2px;
+    position: absolute; /*Pour le placer ou on veut*/
+    height: 70px;
+    width: 280px;
+    border-radius: 50px;
+    background-color: #ffffff;
+    transform: translate(-100%);
+    z-index: -1;
+}
+.sec3 .right img{
+    width: 100%;
+}
+
+@media(max-width: 1450px){
+    .sec3 .right{
+        max-width: 450px;
+    }
+}
+
+@media(max-width: 1150px){
+    .sec3 .container{
+        flex-direction: column;
+    }
+    .sec3 .left{
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .sec3 .separateur{
+        border-radius: 50px;
+    }
+    .sec3 p{
+        margin: 0 20px;
+    }
+    .sec3 button{
+        margin: 50px 0;
+    }
+}
