--- a/style.css
+++ b/style.css
@@ -133,16 +133,22 @@ header .container ul a{
     z-index: -1;
 }
 
-.sec1 button:hover::before, .sec3 button:hover::before{
+.sec1 button:hover::before, 
+.sec3 button:hover::before,
+.sec4 button:hover::before{
     transform: translate(0%);
 }
 
-.sec1 button i, .sec3 button i{
+.sec1 button i, 
+.sec3 button i,
+.sec4 button i{
     transform: scale(0);
     margin: -20px;
     transition: 0.3s;
 }
-.sec1 button:hover i, .sec3 button:hover i{
+.sec1 button:hover i, 
+.sec3 button:hover i,
+.sec4 button:hover i{
     transform: scale(1);
     margin-left: 10px;
 }
@@ -199,6 +205,7 @@ header .container ul a{
 .transition{
     width: 100%;
     position: absolute;
+    z-index: 66;
 }
 .transition img{
     width: 100%;
@@ -280,7 +287,7 @@ header .container ul a{
     line-break: anywhere;
 }
 
-.content{
+.sec2 .content{
     width: 100%;
     display: flex;
     align-items: center;
@@ -390,7 +397,8 @@ header .container ul a{
     margin-bottom: 50px;
 }
 
-.sec3 button{
+.sec3 button,
+.sec4 button{
     position: relative; /*Pour pouvoir placer le before*/
     height: 60px;
     width: 220px;
@@ -403,12 +411,14 @@ header .container ul a{
     overflow: hidden;
     transition: 0.5s;
 }
-.sec3 button:hover{
+.sec3 button:hover,
+.sec4 button:hover{
     color: #31489f;
     width: 280px;
 }
 
-.sec3 button::before{
+.sec3 button::before, 
+.sec4 button::before{
     content: "";
     top: -2px;
     transition: 0.5s;
@@ -456,5 +466,142 @@ header .container ul a{
     }
     .sec3 h1{
         font-size: 3em;
+    }
+}
+
+/* SECTION 4 */
+
+.sec4{
+    position: relative;
+    height: 750px;
+    background-image: url(svg/2.svg);
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: cover;
+    z-index: 2;
+    filter: drop-shadow(3px 5px 4px #232323);
+    top: -2px;
+}
+
+.sec4 .content{
+    display: flex;
+    align-items: center;
+    height: 100%; /* Pour faire la taille totale de son parent donc 750px */
+}
+
+.sec4 .mid {
+    width: 600px;
+}
+.sec4 .left img{
+    margin: 0 170px 0 110px ;
+}
+
+.sec4 .mid h1 {
+    font-size: 3em;
+    color: white;
+}
+.sec4 .mid h2 {
+    font-size: 2em;
+    color: white;
+}
+
+.sec4 .mid p{
+    max-width: 400px;
+    color: white;
+    margin: 50px 0;
+}
+
+.sec4 .right{
+    position: relative;
+    left: -100px;
+    z-index: -1;
+}
+
+@media(max-width: 1600px){
+    .sec4 .right{
+        display: none;
+    }
+}
+@media(max-width: 1250px){
+    .sec4{
+        filter: none;
+    }
+    .sec4 .content{
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+    .sec4 .left{
+        margin: 0;
+    }
+    .sec4 .left img{
+        width: 350px;
+    }
+    .sec4 .mid{
+        text-align: center;
+        margin-bottom: 30px;
+        width: 90%;
+    }
+    .sec4 .mid p{
+        margin: 30px auto;
+        max-width: 350px;
+        line-break: anywhere;
+    }
+    .sec4 .mid h1,
+    .sec4 .mid h2,
+    .sec4 .mid p {
+        color: #66aefc;
+    }
+    .sec4 button{
+        position: relative; /*Pour pouvoir placer le before*/
+        height: 60px;
+        width: 220px;
+        border-radius: 50px;
+        border: 3px solid #66aefc;
+        background-color: transparent;
+        font-size: 1.5em;
+        color: #66aefc;
+        z-index: 2;
+        overflow: hidden;
+        transition: 0.5s;
+    }
+    .sec4 button:hover{
+        color: #ffffff;
+        width: 280px;
+    }
+    .sec4 button::before{
+        background-color: #66aefc;
+    }
+    .sec4 img{
+        filter: drop-shadow(0 0 4px #232323);
+    }
+}
+
+/* ONGLET SIDE */
+
+.onglet-side{
+    position: fixed;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 30px;
+    z-index: 999;
+}
+
+.onglet-side a {
+    width: 12px;
+    height: 12px;
+    margin: 5px 0px;
+    background-color: white;
+    border: 2px solid #31489f;
+    border-radius: 50px;
+}
+.onglet-side a.active {
+    background-color: #31489f;
+}
+
+@media(max-width: 730px){
+    .onglet-side a {
+        display: none;
     }
 }
